--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <br> 
 				<hr>
 				<br><br>
-				<video  controls autoplay muted  loop  style="width: 400px; margin: auto; display: block;">
+				<video autoplay muted  loop  style="width: 400px; margin: auto; display: block;">
 					<source src="introduce.mp4" type="video/mp4">
 				</video>
 				<br><br>
